<resources>
    <!-- General values-->
    <string name="app_name">Todo</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>

    <!-- Task values-->
    <string name="task_name">Task name</string>
    <string name="task_description">Description</string>
    <string name="task_state">State</string>
    <string name="task_add">Add task</string>
    <string name="task_supp">Delete task</string>

    <!-- List values -->
    <string name="list_name">List name</string>
    <string name="list_creation">Creation date</string>
    <string name="list_add">Add list</string>
    <string name="list_supp">Delete list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
