<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activitys.TaskListActivity">

    <Button
        android:id="@+id/btn_addNew_taskList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_add"/>

    <Button
        android:id="@+id/btn_del_taskList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_supp"/>

    <Button
        android:id="@+id/btn_back_taskList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"/>

    <ListView
        android:id="@+id/lv_task_taskList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>
