<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fr.rennes.perso.todo.activitys.TaskAddActivity">

    <TextView
            android:id="@+id/tv_name_taskAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/et_name_taskAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="45dp" />

    <TextView
            android:id="@+id/tv_desc_taskAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_description"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="124dp" />

    <EditText
            android:id="@+id/et_desc_taskAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="159dp" />

    <Button
        android:id="@+id/btn_add_taskAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        tools:layout_editor_absoluteX="-192dp"
        tools:layout_editor_absoluteY="764dp" />

    <Button
        android:id="@+id/btn_back_taskAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        tools:layout_editor_absoluteX="-192dp"
        tools:layout_editor_absoluteY="841dp" />

</LinearLayout>
